--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ name = "MemLord"
 dynamic = ["version"]
 description = ""
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.8"
 license-files = ["LICENSE"]
 authors = [
     { name = "ModelCloud", email = "qubitium@modelcloud.ai" },
@@ -14,6 +14,7 @@ authors = [
 keywords = ["MemLord"]
 classifiers = [
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
