--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools >= 64"]
 
 [project]
 name = "MemLord"
-dynamic = ["version"]
+version = "0.0.1-dev0"
 description = ""
 readme = "README.md"
 requires-python = ">=3.8"
